@@ -8,6 +8,7 @@ package vavi.nio.file.cyberduck;
 
 import java.net.URI;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.FileSystem;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -33,7 +34,7 @@ class Test1 {
 
     static {
         System.setProperty("vavi.util.logging.VaviFormatter.extraClassMethod",
-                "org\\.slf4j\\.impl\\.JDK14LoggerAdapter#(log|debug)");
+                "org\\.slf4j\\.impl\\.JDK14LoggerAdapter#(log|debug|warn)");
     }
 
     public static void main(String[] args) throws Exception {
@@ -63,7 +64,7 @@ Debug.println(Level.FINE, root.toString());
      */
     @Test
     void test01() throws Exception {
-        String username = URLEncoder.encode(System.getenv("TEST_WEBDAV_ACCOUNT"), "utf-8");
+        String username = URLEncoder.encode(System.getenv("TEST_WEBDAV_ACCOUNT"), StandardCharsets.UTF_8);
         String password = System.getenv("TEST_WEBDAV_PASSWORD");
         String host = System.getenv("TEST_WEBDAV_HOST");
         String port = System.getenv("TEST_WEBDAV_PORT");
@@ -88,7 +89,7 @@ Debug.println(Level.FINE, uri);
     @Test
     @DisabledIfEnvironmentVariable(named = "GITHUB_WORKFLOW", matches = ".*")
     void test02() throws Exception {
-        String username = URLEncoder.encode(System.getenv("TEST_SFTP_ACCOUNT"), "utf-8");
+        String username = URLEncoder.encode(System.getenv("TEST_SFTP_ACCOUNT"), StandardCharsets.UTF_8);
         String passPhrase = System.getenv("TEST_SFTP_PASSPHRASE");
         String host = System.getenv("TEST_SFTP_HOST");
         String keyPath = System.getenv("TEST_SFTP_KEYPATH");
